tests/golden/errors/constant_overloaded.kso
fn main
  print "{size 1}"

fn size
  9

fn size x
  x
