tests/golden/errors/constant_overloaded.stderr
error[dispatch]: `size` is a constant (arity 0); a constant admits no overloads
  --> constant_overloaded.kso:7:4
   7 | fn size x
          ^
